--- a/src/style/BootstrapSettings.sass
+++ b/src/style/BootstrapSettings.sass
@@ -7,7 +7,7 @@
 //@import "~bootstrap/scss/_type.scss"
 //@import "~bootstrap/scss/_images.scss"
 //@import "~bootstrap/scss/_code.scss"
-//@import "~bootstrap/scss/_grid.scss"
+@import "~bootstrap/scss/_grid.scss"
 //@import "~bootstrap/scss/_tables.scss"
 //@import "~bootstrap/scss/_forms.scss"
 //@import "~bootstrap/scss/_buttons.scss"
