--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -5,11 +5,24 @@
     left:0;
     bottom:0;
     right:0;
-
+    padding: 25px 0;
 }
 .footer_year{
     font-size: 12px;
     color: #999;
     margin: auto;
-    padding: 25px 0;
+    text-align: center;
+}
+.footer__prone{
+    margin: auto;
+    color: #999;
+    text-align: center;
+
+}
+.footer__prone a{
+    color: #999;
+}
+
+.footer__prone a:hover{
+    text-decoration: none;
 }
