I add contact section and copy content to other pages.

--- a/src/style/BootstrapSettings.sass
+++ b/src/style/BootstrapSettings.sass
@@ -9,8 +9,8 @@
 //@import "~bootstrap/scss/_code.scss"
 @import "~bootstrap/scss/_grid.scss"
 //@import "~bootstrap/scss/_tables.scss"
-//@import "~bootstrap/scss/_forms.scss"
-//@import "~bootstrap/scss/_buttons.scss"
+@import "~bootstrap/scss/_forms.scss"
+@import "~bootstrap/scss/_buttons.scss"
 @import "~bootstrap/scss/_transitions.scss"
 //@import "~bootstrap/scss/_dropdown.scss"
 //@import "~bootstrap/scss/_button-group.scss"
