--- a/src/style/Service.css
+++ b/src/style/Service.css
@@ -1,15 +1,19 @@
 .box{
     text-align: center;
-    margin: 20px auto;
+    margin: 0px auto 40px;
 }
 .box__img{
     width: 100%;
-    max-width: 200px;
+    max-width: 270px;
     height: auto;
 }
 
 .box__title{
     margin-top: 25px;
+}
+
+.box__description{
+    margin-bottom: 30px;
 }
 
 .box__button{
@@ -18,7 +22,9 @@
     background-color: #2dad67;
     border-color: #2dad67;
 }
+
 .box__button:hover{
     background-color: #82b440;
     border-color: #82b440;
 }
+
