--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,6 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html {
+  width: 100vw;
+}
+
+/*::-webkit-scrollbar {*/
+  /*display: none;*/
+/*}*/
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
   monospace;
