Improve price page.

--- a/src/style/Price__short.css
+++ b/src/style/Price__short.css
@@ -1,9 +1,9 @@
 .price{
     width: 100%;
-    height: 50px;
+    height: 42px;
 }
 .price-label{
-    background-color: linen;
+    background: #005ebe;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -11,36 +11,41 @@
 }
 .price-label__name{
     width: 40%;
-    height: 50px;
+    height: 42px;
     border-right: 1px solid #5a6268;
 }
 
 .price-label__price{
     width: 60%;
-    height: 50px;
+    height: 42px;
 }
-.price-label p, .price-row p{
+.price-label p{
+    color: #fff;
     padding: 0px;
     margin: 0px;
-    line-height: 50px;
+    line-height: 42px;
     text-align: center;
+    font-weight: 400;
 }
-
+.price-row p{
+    color: #222;
+    padding: 5px 0px;
+    margin: 0px;
+    line-height: 42px;
+    text-align: center;
+    font-weight: 400;
+}
 .price-row{
     width: 100%;
     display: flex;
     flex-direction: row;
-    border: 1px solid #5a6268;
+    border-bottom: 1px solid #5a6268;
     border-top: 0;
 }
 .price-row__name{
     width: 40%;
-    border-right: 1px solid #5a6268;
+    /*border-right: 1px solid #5a6268;*/
 }
 .price-row__price{
     width: 60%;
-}
-.price-row__text{
-    text-align: center;
-    line-height: 50px;
 }
