--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,8 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 /*::-webkit-scrollbar {*/
