--- a/src/style/BootstrapSettings.sass
+++ b/src/style/BootstrapSettings.sass
@@ -42,6 +42,10 @@
 
 .navbar
   padding-top: 0
+.btn-light
+  background-color: #dedddd
+button.active
+  box-shadow: 0px 0px 7px 0.2rem rgba(216, 217, 219, 0.5)
 
 @media screen and (max-width: 991px)
   .bg-dark
