--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: #1a1a1a;
+    background: #0d0d0d;
     width: 100%;
     position:absolute;
     left:0;
@@ -9,18 +9,18 @@
 }
 .footer_year{
     font-size: 12px;
-    color: #999;
+    color: #c9c9c9;
     margin: auto;
     text-align: center;
 }
 .footer__prone{
     margin: auto;
-    color: #999;
+    color: #c9c9c9;
     text-align: center;
 
 }
 .footer__prone a{
-    color: #999;
+    color: #c9c9c9;
 }
 
 .footer__prone a:hover{
