--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -1,5 +1,6 @@
 
 .header{
+    background-color: #32936f;
     border-bottom: 1px solid #3f3f3f3f;
 }
 
@@ -14,7 +15,7 @@
 .nav-link{
     font-weight: 700;
     font-size: 14px;
-    color: #333 !important;
+    color: #dedddd !important;
 
 }
 .logo{
