--- a/src/style/Price__short.css
+++ b/src/style/Price__short.css
@@ -3,11 +3,11 @@
     height: 42px;
 }
 .price-label{
-    background: #005ebe;
+    background: #32936f;
     width: 100%;
     display: flex;
     flex-direction: row;
-    border: 1px solid #5a6268;
+    border: 1px solid #32936f;
 }
 .price-label__name{
     width: 40%;
