--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -41,11 +41,7 @@ button.active{
     border-color: #d3d9df;
 }
 
-@media (max-width: 575.98px) {
-
-}
-
-@media (max-width: 767.98px) {
+@media (max-width: 1199.98px) {
 
 }
 
@@ -63,6 +59,19 @@ button.active{
     }
 }
 
-@media (max-width: 1199.98px) {
+
+@media (max-width: 767.98px) {
 
 }
+
+
+@media (max-width: 575.98px) {
+    html {
+        max-width: 100%;
+    }
+}
+
+
+
+
+
