I fix issue with reconvert style.

--- a/src/style/App.sass
+++ b/src/style/App.sass
@@ -1,41 +1,26 @@
-body
-  margin: 0
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-
-
-html
-  width: 100vw
-  overflow-x: hidden
-
-#root
-  min-height: 100vh
-  position: relative
-  padding-bottom: 92px
-
-
-.section-title
-  text-align: center
-  margin-top: 20px
-  margin-bottom: 30px
-
-div.section
-  margin: 30px auto 40px
 
 .header
   box-shadow: 1px -1px 10px 2px rgba(179,179,179,1)
 
-@import './BootstrapSettings.sass'
-@import "./Footer.sass"
-@import "./Menu.sass"
-@import "./Contact.sass"
-@import "./ContactForm.sass"
-@import "./About.sass"
-@import "./Main.sass"
-@import "./Map.sass"
-@import "./Price__short.sass"
-@import "./Welcome.sass"
-@import "./Service.sass"
-@import "./ServiceSingle.sass"
+.App
+  text-align: center
+
+
+.App-logo
+  height: 40vmin
+
+
+.App-header
+  background-color: #282c34
+  min-height: 100vh
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  font-size: calc(10px + 2vmin)
+  color: white
+
+
+.App-link
+  color: #09d3ac
+
