I add varibles for colors.

--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -1,7 +1,7 @@
 
 .header
-  background-color: #32936f
-  border-bottom: 1px solid #3f3f3f
+  background-color: $repair-header__background
+  border-bottom: 1px solid $repair-header__border
 
 
 .navbar
