--- a/src/style/Service.sass
+++ b/src/style/Service.sass
@@ -19,12 +19,12 @@
 .box__button
   margin: auto
   display: block
-  background-color: #2dad67
-  border-color: #2dad67
+  background-color: $repair-green
+  border-color: $repair-green
 
 
 .box__button:hover
-  background-color: #82b440
-  border-color: #82b440
+  background-color: $repair-green-hover
+  border-color: $repair-green-hover
 
 
