--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -28,7 +28,8 @@ div.section
 
 
 
-@import './BootstrapSettings.sass'
+@import "./BootstrapSettings.sass"
+@import "./Variables.sass"
 @import "./App.sass"
 @import "./Main.sass"
 @import "./Menu.sass"
