--- a/src/style/ContactForm.sass
+++ b/src/style/ContactForm.sass
@@ -6,12 +6,12 @@
 .contact-form__button
   margin: 30px auto auto
   display: block
-  background-color: #2dad67
-  border-color: #2dad67
+  background-color: $repair-green
+  border-color: $repair-green
 
 .contact-form__button:hover
-  background-color: #82b440
-  border-color: #82b440
+  background-color: $repair-green-hover
+  border-color: $repair-green-hover
 
 .contact-form
   margin: 40px auto
