I add new title for pages.

--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -1,7 +1,12 @@
 
 .header
-  background-color: $repair-header__background
-  border-bottom: 1px solid $repair-header__border
+  //background-color: $repair-header__background
+  //border-bottom: 1px solid $repair-header__border
+  position: absolute
+  top: 0px
+  width: 100%
+  //box-shadow: 1px -1px 10px 2px rgba(179,179,179,1)
+  z-index: 1
 
 
 .navbar
@@ -39,6 +44,9 @@
 button.active
   background-color: #b6c5d2
   border-color: #d3d9df
+
+
+
 
 @media (max-width: 991.98px)
   .switch-language
