--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -22,7 +22,7 @@ html
   margin-bottom: 30px
 
 div.section
-  margin: 30px auto 40px
+  //padding: 30px 1px 40px
 
 
 
@@ -32,6 +32,7 @@ div.section
 @import "./Variables.sass"
 @import "./App.sass"
 @import "./Main.sass"
+@import "./Title.sass"
 @import "./Menu.sass"
 @import "./Welcome.sass"
 @import "./Service.sass"
