I make new style.

--- a/src/style/About.sass
+++ b/src/style/About.sass
@@ -1,3 +1,9 @@
+.section-bout.part
+  background-color:  $repair-blue
+  padding: 29px 0px
+.section-bout.part p,.section-bout.part h2
+  color: #fff
+
 .section-about__title
 
 .section-title
