--- a/src/style/Price__short.sass
+++ b/src/style/Price__short.sass
@@ -2,11 +2,11 @@
   width: 100%
 
 .price-label
-  background: $repair-green_second
+  background: $repair-blue
   width: 100%
   display: flex
   flex-direction: row
-  border: 1px solid $repair-green_second
+  border: 1px solid $repair-blue
 
 .price-label__name
   width: 40%
