--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -37,20 +37,24 @@
 
 .switch-language
   margin-left: 10px
+  align-items: center
+
 
 .switch-language button
   margin: 0px 5px
-
+  height: 30px
+  padding: 0.19rem 0.45rem
+  line-height: 0px
 button.active
   background-color: #b6c5d2
   border-color: #d3d9df
 
-
+.active.nav-link
+  border-bottom: 2px solid $repair-blue
 
 
 @media (max-width: 991.98px)
   .switch-language
-    margin: 15px auto
     display: flex
     justify-content: center
     align-items: center
@@ -59,6 +63,11 @@ button.active
   .switch-language button
     max-width: 45px
     margin: 0px 10px
+
+@media (max-width: 767.98px)
+  .header
+    background-color: $repair-header__background-mobile
+    padding-bottom: 11px
 
 @media (max-width: 575.98px)
   html
