--- a/src/style/Title.sass
+++ b/src/style/Title.sass
@@ -7,14 +7,25 @@
   display: flex
   justify-content: center
   align-items: center
+  flex-direction: column
   background-image: url(../images/main-2-fullhd.webp)
   background-repeat: no-repeat
-  background-position: center
-  box-shadow: inset 0 0 0 2000px rgba(119, 114, 114, 0.65)
+  background-position: center 29%
+  box-shadow: inset 0 0 0 2000px $repair-blue_lighter
 
-  .svg-triangle
-    width: 100%
-    position: absolute
-    bottom: -1px
-    transform: rotate(180deg)
-    fill: #fff
+.header-section-title__title
+  color: $repair-header__title-text
+
+.header-section-title_triangle
+  width: 100%
+  position: absolute
+  bottom: -1px
+  transform: rotate(180deg)
+  fill: #fff
+
+.header-section-title__line
+  display: block
+  width: 60px
+  height: 1px
+  margin: 20px 0px
+  background-color: #fff
