--- a/src/style/Variables.sass
+++ b/src/style/Variables.sass
@@ -1,8 +1,15 @@
 //$repair_green: #32936f
-$repair-green: #2dad67
-$repair-green-hover: #82b440
+$repair-green: #e07421
+$repair-green-hover: #f07e23
 $repair-green-second: #32936f
+$repair-blue: rgba(0, 32, 81, 1)
+$repair-blue_lighter: rgba(0, 32, 81, 0.65)
 $repair-header__background: #32936f
+$repair-header__background-mobile: rgba(0, 32, 81, 0.85)
+
+$repair-header__title-text: #fff
 $repair-header__border: #3f3f3f
 
-$repair-footer-background: #0d0d0d
+//$repair-footer-background: #0d0d0d
+$repair-footer-background: $repair-blue
+
