--- a/src/style/Welcome.sass
+++ b/src/style/Welcome.sass
@@ -6,7 +6,7 @@
   background-position: center
   height: calc(100vh - 64px)
   max-height: 600px
-  box-shadow: inset 0 0 0 2000px rgba(119, 114, 114, 0.65)
+  box-shadow: inset 0 0 0 2000px $repair-blue_lighter
 
 .section-one__text
   color: #fff
