I add back button in single article .

--- a/src/style/ServiceSingle.sass
+++ b/src/style/ServiceSingle.sass
@@ -7,3 +7,12 @@
 .service-single__desc
 
 
+.service-single__back
+  margin: 20px auto
+  display: block
+  background-color: $repair-green
+  border-color: $repair-green
+
+.service-single__back:hover
+  background-color: $repair-green-hover
+  border-color: $repair-green-hover
