--- a/src/style/ContactForm.sass
+++ b/src/style/ContactForm.sass
@@ -1,15 +1,14 @@
-.section-contact
+.contact
   margin: auto
 
-.section-contact__title
 
-.contact-form__button
+.contact-form__submit
   margin: 30px auto auto
   display: block
   background-color: $repair-green
   border-color: $repair-green
 
-.contact-form__button:hover
+.contact-form__submit:hover
   background-color: $repair-green-hover
   border-color: $repair-green-hover
 
@@ -17,11 +16,11 @@
   margin: 40px auto
 
 
-.contact-left__img
+.contact__img
   width: 100%
   height: auto
 
-.error
+.contact-form__error
   color: #b21f2d
   padding: 2px 7px 7px 7px
 
