Complete BEM for menu.

--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -40,7 +40,7 @@
   align-items: center
 
 
-.switch-language button
+.switch-language__button
   margin: 0px 5px
   height: 30px
   padding: 0.19rem 0.45rem
@@ -60,7 +60,7 @@ button.active
     align-items: center
     flex-direction: row
 
-  .switch-language button
+  .switch-language__button
     max-width: 45px
     margin: 0px 10px
 
