--- a/src/style/About.sass
+++ b/src/style/About.sass
@@ -1,20 +1,19 @@
-.section-bout.part
+.about-main.part
   background-color:  $repair-blue
   padding: 29px 0px
-.section-bout.part p,.section-bout.part h2
+.about-main.part p,.about-main.part h2
   color: #fff
 
-.section-about__title
+.about-main__title
 
-.section-title
 
-.about__face
+.about-main__face
   width: 100%
 
-.about__certificate
+.about-main__certificate
   width: 100%
 
-.about_biography-inner
+.about-main__inner-bio
   margin: 20px 0px
 
 .about_biography-inner__bio
