Fix BEM for price us section\.

--- a/src/style/PriceShort.sass
+++ b/src/style/PriceShort.sass
@@ -1,49 +1,49 @@
 .price
   width: 100%
 
-.price-label
+.price-table-label
   background: $repair-blue
   width: 100%
   display: flex
   flex-direction: row
   border: 1px solid $repair-blue
 
-.price-label__name
+.price-table-label__name
   width: 40%
   height: 42px
   border-right: 1px solid #5a6268
 
 
-.price-label__price
+.price-table-label__price
   width: 60%
   height: 42px
 
-.price-label p
+.price-table-label p
   color: #fff
-  padding: 0px
-  margin: 0px
+  padding: 0
+  margin: 0
   line-height: 42px
   text-align: center
   font-weight: 400
 
-.price-row p
+.price-table-row p
   color: #222
   padding: 5px 0px
-  margin: 0px
+  margin: 0
   line-height: 42px
   text-align: center
   font-weight: 400
 
-.price-row
+.price-table-row
   width: 100%
   display: flex
   flex-direction: row
   border-bottom: 1px solid #5a6268
   border-top: 0
 
-.price-row__name
+.price-table-row__name
   width: 40%
 
-.price-row__price
+.price-table-row__price
   width: 60%
 
