Fix BEM for price section.

--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -41,5 +41,5 @@ div.section
 @import "./Contact.sass"
 @import "./ContactForm.sass"
 @import "./Map.sass"
-@import "./Price__short.sass"
+@import "./PriceShort"
 @import "./Footer.sass"
