Fix header image and make component sort.

--- a/src/style/Contact.sass
+++ b/src/style/Contact.sass
@@ -1,8 +1,8 @@
 .fixwidth
   min-height: 1px
 
-.section-contact.part
-  padding: 20px 0px
+//.contact.part
+//  padding: 20px 0px
 
 @media (max-width: 767.98px)
   .contact__title
