--- a/src/style/About.sass
+++ b/src/style/About.sass
@@ -1,6 +1,6 @@
 .about-main.part
   background-color:  $repair-blue
-  padding: 29px 0px
+  //padding: 29px 0px
 .about-main.part p,.about-main.part h2
   color: #fff
 
