--- a/src/style/Title.sass
+++ b/src/style/Title.sass
@@ -10,7 +10,7 @@
   flex-direction: column
   background-image: url(../images/main-2-fullhd.webp)
   background-repeat: no-repeat
-  background-position: center 29%
+  background-position: top center
   box-shadow: inset 0 0 0 2000px $repair-blue_lighter
 
 .header-section-title__title
