--- a/src/style/Welcome.sass
+++ b/src/style/Welcome.sass
@@ -3,7 +3,7 @@
   align-items: center
   background-image: url(../images/main-2-fullhd.webp)
   background-repeat: no-repeat
-  background-position: center
+  background-position: top center
   height: calc(100vh - 64px)
   max-height: 600px
   box-shadow: inset 0 0 0 2000px $repair-blue_lighter
