--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -26,6 +26,10 @@ div.section
   //padding: 20px 0px
 
 
+.contact.part, .about-main.part,.services.part
+  padding: 20px 0px
+
+
 
 
 @import "./BootstrapSettings.sass"
