Fix issue with merge.

--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -1,6 +1,6 @@
 
 .header
-  //background-color: $repair-header__background
+  background-color: $repair-header__background-mobile
   //border-bottom: 1px solid $repair-header__border
   position: absolute
   top: 0px
