I made small fixed style.

--- a/src/style/Title.sass
+++ b/src/style/Title.sass
@@ -15,6 +15,7 @@
 
 .header-section-title__title
   color: $repair-header__title-text
+  z-index: 1
 
 .header-section-title_triangle
   width: 100%
