I updated google map. I added google icon.

--- a/src/style/Map.sass
+++ b/src/style/Map.sass
@@ -4,3 +4,11 @@
 .map__map
   height: 60vh
   width: 100%
+
+.google-icon
+  background-image: url("../images/google-icon.png")
+  width: 27px
+  height: 49px
+  background-size: cover
+  position: relative
+  top: -27px
