I have fixed issue with link and removed admit template.

--- a/src/style/BootstrapSettings.sass
+++ b/src/style/BootstrapSettings.sass
@@ -49,4 +49,4 @@ button.active
 
 @media screen and (max-width: 991px)
   .bg-dark
-    background-color: #222222 !important
+    background-color: #d8acac !important
