i added small undates to code.

--- a/src/style/Variables.sass
+++ b/src/style/Variables.sass
@@ -7,6 +7,8 @@ $repair-blue_lighter: rgba(0, 32, 81, 0.65)
 $repair-header__background: #32936f
 $repair-header__background-mobile: rgba(0, 32, 81, 0.85)
 
+$repair-menu-color: #ffffff
+
 $repair-header__title-text: #fff
 $repair-header__border: #3f3f3f
 
