--- a/src/style/Menu.sass
+++ b/src/style/Menu.sass
@@ -15,12 +15,12 @@
 
 
 .active.nav-link
-  border-bottom: 2px solid #333
+  border-bottom: 2px solid #fff
 
 .nav-link
   font-weight: 700
   font-size: 14px
-  color: #dedddd !important
+  color: #ffffff !important
 
 
 .logo
@@ -51,7 +51,7 @@ button.active
   border-color: #d3d9df
 
 .active.nav-link
-  border-bottom: 2px solid $repair-blue
+  border-bottom: 2px solid $repair-menu-color
 
 
 @media (max-width: 991.98px)
