I have started to update frim clear React to Next.js

--- a/styles/Map.sass
+++ b/styles/Map.sass
@@ -6,7 +6,7 @@
   width: 100%
 
 .google-icon
-  background-image: url("../images/google-icon.png")
+  background-image: url("../public/images/google-icon.png")
   width: 19px
   height: 36px
   background-size: cover
