--- a/styles/Menu.sass
+++ b/styles/Menu.sass
@@ -9,6 +9,7 @@
   z-index: 1
 
 
+
 .navbar
   padding-bottom: 0px
   width: 100%
@@ -75,6 +76,11 @@ button.active
     max-width: 100%
 
 
+@media (min-width:768px)
+  .header
+    height: 64px
+    display: flex
+    align-items: center
 
 
 
