--- a/styles/index.sass
+++ b/styles/index.sass
@@ -10,9 +10,15 @@ html
   width: 100vw
   overflow-x: hidden
 
-#root
+#__next
   min-height: 100vh
   position: relative
+  padding-bottom: 92px
+
+#__next
+  position: relative
+  overflow-x: hidden
+  padding-top: 64px
   padding-bottom: 92px
 
 
