--- a/styles/Title.sass
+++ b/styles/Title.sass
@@ -8,7 +8,7 @@
   justify-content: center
   align-items: center
   flex-direction: column
-  background-image: url(../images/main-2-fullhd.webp)
+  background-image: url(../public/images/main-2-fullhd.webp)
   background-repeat: no-repeat
   background-position: top center
   box-shadow: inset 0 0 0 2000px $repair-blue_lighter
