--- a/styles/Welcome.sass
+++ b/styles/Welcome.sass
@@ -1,7 +1,7 @@
 .section-one
   display: flex
   align-items: center
-  background-image: url(../images/main-2-fullhd.webp)
+  background-image: url(../public/images/main-2-fullhd.webp)
   background-repeat: no-repeat
   background-position: top center
   height: calc(100vh - 64px)
