I updated package.json file.

--- a/styles/BootstrapSettings.sass
+++ b/styles/BootstrapSettings.sass
@@ -34,6 +34,7 @@
 //@import "~bootstrap/scss/_popover.scss"
 //@import "~bootstrap/scss/_carousel.scss"
 //@import "~bootstrap/scss/_spinners.scss"
+@import "~bootstrap/scss/maps"
 @import "~bootstrap/scss/_utilities.scss"
 //@import "~bootstrap/scss/_print.scss"
 
@@ -47,6 +48,12 @@
 button.active
   box-shadow: 0px 0px 4px 0.2rem rgba(216, 217, 219, 0.5)
 
+
+
+
+
 @media screen and (max-width: 991px)
   .bg-dark
     background-color: #d8acac !important
+
+
