--- a/styles/PriceShort.sass
+++ b/styles/PriceShort.sass
@@ -1,49 +1,49 @@
 .price
-  width: 100%
+	width: 100%
 
-.price-table-label
-  background: $repair-blue
-  width: 100%
-  display: flex
-  flex-direction: row
-  border: 1px solid $repair-blue
+	&-table
+		margin-bottom: 25px
 
-.price-table-label__name
-  width: 40%
-  height: 42px
-  border-right: 1px solid #5a6268
+		&-label
+			background: $repair-blue
+			width: 100%
+			display: flex
+			flex-direction: row
+			border: 1px solid $repair-blue
 
+			&__name
+				width: 40%
+				height: 42px
+				border-right: 1px solid #5a6268
 
-.price-table-label__price
-  width: 60%
-  height: 42px
+			&__price
+				width: 60%
+				height: 42px
 
-.price-table-label p
-  color: #fff
-  padding: 0
-  margin: 0
-  line-height: 42px
-  text-align: center
-  font-weight: 400
+			p
+				color: #fff
+				padding: 0
+				margin: 0
+				line-height: 42px
+				text-align: center
+				font-weight: 400
 
-.price-table-row p
-  color: #222
-  padding: 5px 0px
-  margin: 0
-  line-height: 42px
-  text-align: center
-  font-weight: 400
+		&-row
+			width: 100%
+			display: flex
+			flex-direction: row
+			border-bottom: 1px solid #5a6268
+			border-top: 0
+			p
+				color: #222
+				padding: 5px 0px
+				margin: 0
+				line-height: 42px
+				text-align: center
+				font-weight: 400
 
-.price-table-row
-  width: 100%
-  display: flex
-  flex-direction: row
-  border-bottom: 1px solid #5a6268
-  border-top: 0
+			&__name
+				width: 40%
 
-.price-table-row__name
-  width: 40%
-
-.price-table-row__price
-  width: 60%
-
+			&__price
+				width: 60%
