--- a/styles/App.sass
+++ b/styles/App.sass
@@ -1,27 +1,23 @@
 
-
 .App
-  text-align: center
+	text-align: center
 
+	&-logo
+		height: 40vmin
 
-.App-logo
-  height: 40vmin
+	&-header
+		background-color: #282c34
+		min-height: 100vh
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: center
+		font-size: calc(10px + 2vmin)
+		color: white
+
+	&-link
+		color: #09d3ac
 
 .preloader
-  text-align: center
-  width: 100%
-
-.App-header
-  background-color: #282c34
-  min-height: 100vh
-  display: flex
-  flex-direction: column
-  align-items: center
-  justify-content: center
-  font-size: calc(10px + 2vmin)
-  color: white
-
-
-.App-link
-  color: #09d3ac
-
+	text-align: center
+	width: 100%
