--- a/styles/ContactForm.sass
+++ b/styles/ContactForm.sass
@@ -1,26 +1,23 @@
 .contact
-  margin: auto
+	margin: auto
 
+	&-form__submit
+		margin: 30px auto auto
+		display: block
+		background-color: $repair-green
+		border-color: $repair-green
 
-.contact-form__submit
-  margin: 30px auto auto
-  display: block
-  background-color: $repair-green
-  border-color: $repair-green
+		&__submit:hover
+			background-color: $repair-green-hover
+			border-color: $repair-green-hover
 
-.contact-form__submit:hover
-  background-color: $repair-green-hover
-  border-color: $repair-green-hover
+	&-form
+		margin: 40px auto
 
-.contact-form
-  margin: 40px auto
+		&__error
+			color: #b21f2d
+			padding: 2px 7px 7px 7px
 
-
-.contact__img
-  width: 100%
-  height: auto
-
-.contact-form__error
-  color: #b21f2d
-  padding: 2px 7px 7px 7px
-
+	&__img
+		width: 100%
+		height: auto
