--- a/styles/Footer.sass
+++ b/styles/Footer.sass
@@ -1,28 +1,24 @@
 .footer
-  background: $repair-footer-background
-  width: 100%
-  position: absolute
-  left: 0
-  bottom: 0
-  right: 0
-  padding: 25px 0
+	background: $repair-footer-background
+	width: 100%
+	position: absolute
+	left: 0
+	bottom: 0
+	right: 0
+	padding: 25px 0
 
-.footer_year
-  font-size: 12px
-  color: #c9c9c9
-  margin: auto
-  text-align: center
+	&__year
+		font-size: 12px
+		color: #c9c9c9
+		margin: auto
+		text-align: center
 
-.footer__prone
-  margin: auto
-  color: #c9c9c9
-  text-align: center
+	&__prone
+		margin: auto
+		color: #c9c9c9
+		text-align: center
 
-
-.footer__prone a
-  color: #c9c9c9
-
-
-.footer__prone a:hover
-  text-decoration: none
-
+		a
+			color: #c9c9c9
+			&:hover
+				text-decoration: none
