--- a/styles/Map.sass
+++ b/styles/Map.sass
@@ -1,14 +1,14 @@
 .map
-  margin: 20px  auto
+	margin: 20px auto
 
-.map__map
-  height: 60vh
-  width: 100%
+	&__map
+		height: 60vh
+		width: 100%
 
 .google-icon
-  background-image: url("../public/images/google-icon.png")
-  width: 19px
-  height: 36px
-  background-size: cover
-  position: relative
-  top: -27px
+	background-image: url("../public/images/google-icon.png")
+	width: 19px
+	height: 36px
+	background-size: cover
+	position: relative
+	top: -27px
