--- a/styles/Menu.sass
+++ b/styles/Menu.sass
@@ -1,88 +1,80 @@
 
 .header
-  background-color: $repair-header__background-mobile
-  //border-bottom: 1px solid $repair-header__border
-  position: absolute
-  top: 0px
-  width: 100%
-  //box-shadow: 1px -1px 10px 2px rgba(179,179,179,1)
-  z-index: 1
-
-
+	background-color: $repair-header__background-mobile
+	//border-bottom: 1px solid $repair-header__border
+	position: absolute
+	top: 0px
+	width: 100%
+	//box-shadow: 1px -1px 10px 2px rgba(179,179,179,1)
+	z-index: 1
 
 .navbar
-  padding-bottom: 0px
-  width: 100%
+	padding-bottom: 0px
+	width: 100%
 
+.active
 
-.active.nav-link
-  border-bottom: 2px solid #fff
+	&.nav-link
+		border-bottom: 2px solid #fff
 
 .nav-link
-  font-weight: 700
-  font-size: 14px
-  color: #ffffff !important
-
+	font-weight: 700
+	font-size: 14px
+	color: #ffffff !important
 
 .logo
-  width: 150px
-  height: auto
+	width: 150px
+	height: auto
 
-.navbar-light .navbar-toggler
-  border: 0
-  outline: none
+.navbar-light
+
+	&.navbar-toggler
+		border: 0
+		outline: none
 
 .navbar-toggler-icon
-  width: 2em!important
-  height: 2em!important
+	width: 2em!important
+	height: 2em!important
 
 .switch-language
-  margin-left: 10px
-  align-items: center
+	margin-left: 10px
+	align-items: center
 
-
-.switch-language__button
-  margin: 0px 5px
-  height: 30px
-  padding: 0.19rem 0.45rem
-  line-height: 0px
+	&__button
+		margin: 0px 5px
+		height: 30px
+		padding: 0.19rem 0.45rem
+		line-height: 0px
 
 button.active
-  background-color: #b6c5d2
-  border-color: #d3d9df
+	background-color: #b6c5d2
+	border-color: #d3d9df
 
 .active.nav-link
-  border-bottom: 2px solid $repair-menu-color
-
+	border-bottom: 2px solid $repair-menu-color
 
 @media (max-width: 991.98px)
-  .switch-language
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-direction: row
+	.switch-language
+		display: flex
+		justify-content: center
+		align-items: center
+		flex-direction: row
 
-  .switch-language__button
-    max-width: 45px
-    margin: 0px 10px
+		&__button
+			max-width: 45px
+			margin: 0px 10px
 
 @media (max-width: 767.98px)
-  .header
-    background-color: $repair-header__background-mobile
-    padding-bottom: 11px
+	.header
+		background-color: $repair-header__background-mobile
+		padding-bottom: 11px
 
 @media (max-width: 575.98px)
-  html
-    max-width: 100%
-
+	html
+		max-width: 100%
 
 @media (min-width:768px)
-  .header
-    height: 64px
-    display: flex
-    align-items: center
-
-
-
-
-
+	.header
+		height: 64px
+		display: flex
+		align-items: center
