--- a/styles/ServiceSingle.sass
+++ b/styles/ServiceSingle.sass
@@ -1,18 +1,16 @@
 .service-single
 
-.service-single__title
-  margin: 20px auto
-  text-align: center
+	&__title
+		margin: 20px auto
+		text-align: center
 
-.service-single__desc
+		&__desc
 
-
-.service-single__back
-  margin: 20px auto
-  display: block
-  background-color: $repair-green
-  border-color: $repair-green
-
-.service-single__back:hover
-  background-color: $repair-green-hover
-  border-color: $repair-green-hover
+		&__back
+			margin: 20px auto
+			display: block
+			background-color: $repair-green
+			border-color: $repair-green
+		&:hover
+			background-color: $repair-green-hover
+			border-color: $repair-green-hover
